# cplusplus

./: .clang-format  .gitignore  Dockerfile  LICENSE  README.md  cplus_containers.md
.devcontainer/: devcontainer.json
ODR/: CMakeLists.txt  a.cpp  app.cpp  b.cpp  dummy.cpp  s.cpp  s.h
ODR/shared/: CMakeLists.txt  a.cpp  app.cpp
ODR/static/: CMakeLists.txt  README.md  a.cpp  app.cpp  b.cpp
RAII/: README.md  app.cpp
callable/: README.md  bind.cpp  func_obj.cpp  func_types.cpp  func_types.py  method.cpp  size.cpp  stdfunction.cpp
closure&move/: README.md  app.cpp  closure.cpp
condvar/: app.cpp  mutex_flow.drawio  threadpool.cpp
const_on_vector/: app.cpp
decltype/: CMakeLists.txt  README.md  app.cpp  value_catgory.h
dtor_seq/: dtor.cpp  someclass.cpp
dtor_sequence/: CMakeLists.txt  README.md  dtor.cpp  someclass.cpp
exception/: stack_unwinding.cpp  why-destructor-should-not-throw.md
exception_handling/: CMakeLists.txt
expression/: README.md  app.cpp  value_catgory.h
expression&decltype/: README.md  value_catgory.h
implicit_object_parameter/: README.md  app.cpp
invoke/: app.cpp
member_method_overload/: app.cpp  article.md
method_qualifiers/: app.cpp  article.md  ref_rvalue_overload.cpp  ref_rvalueref_overload.cpp
move_iterator/: README.md  app.cpp
move_on_closure/: README.md  app.cpp  closure.cpp
mutex/: CMakeLists.txt  README.md  app.cpp  bpp.cpp
nest_class/: CMakeLists.txt  README.md  app.cpp
operator_overload/: README.md  app.cpp
parameter_binding/: README.md  app.cpp
pimp_unique/: CMakeLists.txt  someclass.cpp  (+1 more)
(+53 files in other folders)
